2019-1/221/users/4106/executions/1766_1576.log
== TEST (2019-05-29 19:19:20) 
-- CODE:
from numpy import*
v1= array(eval(input("Sequencia Eusapia: ")))
v2= array(eval(input("Jogadas Barsanulfo: ")))
i=0
eusa=0
bersa=0
empate=0
while(i< size(v1)and i< size(v2)):
	if((v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or(v1[i]==33 and v2[i]==22)):
		eusa=eusa+1
		elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
			bersa=bersa+1
			elif((v1[i]==11 and v2[i]==11)or (v1[i]==22 and v2[i]==22)or(v1[i]==33 and v2[i]==33)):
				empate=empate+1
				i=i+1
				if(eusa>bersa):
					print(i)
					print("EUSAPIA")
					elif(bersa>eusa):
						print(i)
						print("BARSANULFO")
						elif(bersa==eusa):
							print(i)
							print("EMPATE")
-- ERROR:
File "XXXX", line 11
    elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:19:57) 
-- CODE:
from numpy import*
v1= array(eval(input("Sequencia Eusapia: ")))
v2= array(eval(input("Jogadas Barsanulfo: ")))
i=0
eusa=0
bersa=0
empate=0
while(i< size(v1)and i< size(v2)):
	if((v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or(v1[i]==33 and v2[i]==22)):
		eusa=eusa+1
		elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
			bersa=bersa+1
			elif((v1[i]==11 and v2[i]==11)or (v1[i]==22 and v2[i]==22)or(v1[i]==33 and v2[i]==33)):
				empate=empate+1
				i=i+1
				if(eusa>bersa):
					print(i)
					print("EUSAPIA")
					elif(bersa>eusa):
						print(i)
						print("BARSANULFO")
						elif(bersa==eusa):
							print(i)
							print("EMPATE")
-- ERROR:
File "XXXX", line 11
    elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:20:32) 
-- CODE:
from numpy import*
v1= array(eval(input("Sequencia Eusapia: ")))
v2= array(eval(input("Jogadas Barsanulfo: ")))
i=0
eusa=0
bersa=0
empate=0
while(i< size(v1)and i< size(v2)):
	if((v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or(v1[i]==33 and v2[i]==22)):
		eusa=eusa+1
		elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
			bersa=bersa+1
			elif((v1[i]==11 and v2[i]==11)or (v1[i]==22 and v2[i]==22)or(v1[i]==33 and v2[i]==33)):
				empate=empate+1
				i=i+1
				if(eusa>bersa):
					print(i)
					print("EUSAPIA")
					elif(bersa>eusa):
						print(i)
						print("BARSANULFO")
						elif(bersa==eusa):
							print(i)
							print("EMPATE")
-- ERROR:
File "XXXX", line 11
    elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:24:47) 
-- CODE:
from numpy import*
v1= array(eval(input("Sequencia Eusapia: ")))
v2= array(eval(input("Jogadas Barsanulfo: ")))
i=0
eusa=0
bersa=0
empate=0
while(i< size(v1)and i< size(v2)):
	if((v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or(v1[i]==33 and v2[i]==22)):
		eusa=eusa+1
		elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
			bersa=bersa+1
			elif((v1[i]==11 and v2[i]==11)or (v1[i]==22 and v2[i]==22)or(v1[i]==33 and v2[i]==33)):
				empate=empate+1
				i=i+1
				if(eusa>bersa):
					print(i)
					print("EUSAPIA")
					elif(bersa>eusa):
						print(i)
						print("BARSANULFO")
						elif(bersa==eusa):
							print(i)
							print("EMPATE")
-- ERROR:
File "XXXX", line 11
    elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:53:39) 
-- CODE:
from numpy import*
v1= array(eval(input("Sequencia Eusapia: ")))
v2= array(eval(input("Jogadas Barsanulfo: ")))
i=0
eusa=0
bersa=0
empate=0
while(i< size(v1)and i< size(v2)):
	if((v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or(v1[i]==33 and v2[i]==22)):
		eusa=eusa+1
		elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
			bersa=bersa+1
			elif((v1[i]==11 and v2[i]==11)or (v1[i]==22 and v2[i]==22)or(v1[i]==33 and v2[i]==33)):
				empate=empate+1
				i=i+1
				if(eusa>bersa):
					print(i)
					print("EUSAPIA")
					elif(bersa>eusa):
						print(i)
						print("BARSANULFO")
						elif(bersa==eusa):
							print(i)
							print("EMPATE")
-- ERROR:
File "XXXX", line 11
    elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:41:00) 
-- CODE:
from numpy import*
v1= array(eval(input("Sequencia Eusapia: ")))
v2= array(eval(input("Jogadas Barsanulfo: ")))
i=0
eusa=0
bersa=0
empate=0
while(i< size(v1)and i< size(v2)):
	if((v1[i]==11 and v2[i]==33) or (v1[i]==22 and v2[i]==11) or(v1[i]==33 and v2[i]==22)):
		eusa=eusa+1
		elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
			bersa=bersa+1
			elif((v1[i]==11 and v2[i]==11)or (v1[i]==22 and v2[i]==22)or(v1[i]==33 and v2[i]==33)):
				empate=empate+1
				i=i+1
				if(eusa>bersa):
					print(i)
					print("EUSAPIA")
					elif(bersa>eusa):
						print(i)
						print("BARSANULFO")
						elif(bersa==eusa):
							print(i)
							print("EMPATE")
-- ERROR:
File "XXXX", line 11
    elif((v1[i]==11 and v2[i]==22)or (v1[i]==22 and v2[i]==33)or (v1[i]==33 and v2[i]==11)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-03 21:59:23) 
-- CODE:
from numpy import*
v=array(eval(input("Sequencia de Eusapia: ")))
v1 = array(eval(input("Sequencia de Bersanulfo: ")))
i = 0 
eusa = 0 
bersa = 0 
empate = 0 
while(i < size(v) and i < size(v1)):
	if((v[i] == 11 and v1[i] == 33) or (v[i] == 22 and v1[i] == 11) or (v[i] == 33 and v1[i] == 22)):
		eusa = eusa + 1
	elif((v[i] == 11 and v1[i] == 22) or (v[i] == 22 and v1[i] == 33) or (v[i] == 33 and v1[i] == 11)):
			bersa = bersa + 1 
	elif((v[i] == 11 and v1[i] == 11) or (v[i] == 22 and v1[i] == 22) or (v[i] == 33 and v1[i] == 33)):
				empate = empate + 1
	i = i + 1
				
if(eusa > bersa):
	print(i) 
	print("EUSAPIA")
elif(bersa > eusa):
	print(i)
	print("BARSANULFO")
elif(bersa == eusa):
	print(i)
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-03 22:00:17) 
-- CODE:
from numpy import*
v=array(eval(input("Sequencia de Eusapia: ")))
v1 = array(eval(input("Sequencia de Bersanulfo: ")))
i = 0 
eusa = 0 
bersa = 0 
empate = 0 
while(i < size(v) and i < size(v1)):
	if((v[i] == 11 and v1[i] == 33) or (v[i] == 22 and v1[i] == 11) or (v[i] == 33 and v1[i] == 22)):
		eusa = eusa + 1
	elif((v[i] == 11 and v1[i] == 22) or (v[i] == 22 and v1[i] == 33) or (v[i] == 33 and v1[i] == 11)):
			bersa = bersa + 1 
	elif((v[i] == 11 and v1[i] == 11) or (v[i] == 22 and v1[i] == 22) or (v[i] == 33 and v1[i] == 33)):
				empate = empate + 1
	i = i + 1
				
if(eusa > bersa):
	print(i) 
	print("EUSAPIA")
elif(bersa > eusa):
	print(i)
	print("BARSANULFO")
elif(bersa == eusa):
	print(i)
	print("EMPATE")
-- EXECUTION TIME:
1.06191
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
